<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="selected">%1$d Selected</string>
    <string name="select_items">Select Items</string>
    <string name="history">History</string>
    <string name="other_calculator">Other Calculator</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="age">Age</string>
    <string name="area">Area</string>
    <string name="bmi">BMI</string>
    <string name="data">Data</string>
    <string name="date">Date</string>
    <string name="discount">Discount</string>
    <string name="length">Length</string>
    <string name="mass">Mass</string>
    <string name="numeral">Numeral</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="volume">Volume</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="share">Share</string>
    <string name="today">Today</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="next_birthday">Next birthday</string>
    <string name="years">Years</string>
    <string name="summary">Summary</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="ok">Ok</string>
    <string name="financial_gst">Financial &amp; GST</string>
    <string name="gst">GST</string>
    <string name="currency">Currency</string>
    <string name="_0">0</string>
    <string name="normal">Normal</string>
    <string name="settings">Settings</string>
    <string name="app_language">App language</string>
    <string name="choose_theme">Choose theme</string>
    <string name="vibration">Vibration</string>
    <string name="caller_settings">Caller Settings</string>
    <string name="vibrate_when_a_button_is_pressed">Vibrate when a button is pressed</string>
    <string name="system_default">System default</string>
    <string name="english">English</string>
    <string name="personalization">Personalization</string>
    <string name="others">Others</string>
    <string name="share_app">Share app</string>
    <string name="rate_us">Rate us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="weight">Weight</string>
    <string name="kilograms">Kilograms</string>
    <string name="height">Height</string>
    <string name="clear_history">Clear History</string>
    <string name="recalculate">Recalculate</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="delete_history">Delete History</string>
    <string name="completely_clear_your_calculation_history">Completely clear your calculation history?</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="original_price">Original price</string>
    <string name="cgst_sgst_0_00">CGST/SGST: 0.00</string>
    <string name="final_price">Final price</string>
    <string name="_0_00">0.00</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="_3_percentage">3%</string>
    <string name="_5_percentage">5%</string>
    <string name="_12_percentage">12%</string>
    <string name="_18_percentage">18%</string>
    <string name="_28_percentage">28%</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="exchange_rates_are_provided_by_webull_connect_nto_the_network_to_get_the_latest_info">Exchange rates are provided by webull. connect\nto the network to get the latest info.</string>
    <string name="inr">INR</string>
    <string name="indian_rupee">Indian rupee</string>
    <string name="united_states_dollar">United States Dollar</string>
    <string name="euro">Euro</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="select_currency">Select Currency</string>
    <string name="loading">Loading...</string>
    <string name="check_out_this_simple_calculator_app">Check out this Simple Calculator app: %1$s</string>
    <string name="please_grant_permission_to_resize_app">Please grant permission to resize app</string>
    <string name="search">Search</string>
    <string name="title_converter">%1$s Converter</string>
    <string name="age_converter">Age Converter</string>
    <string name="area_converter">Area Converter</string>
    <string name="data_converter">Data Converter</string>
    <string name="length_converter">Length Converter</string>
    <string name="mass_converter">Mass Converter</string>
    <string name="numeral_converter">Numeral Converter</string>
    <string name="speed_converter">Speed Converter</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="time_converter">Time Converter</string>
    <string name="volume_converter">Volume Converter</string>
    <string name="financial_amp_gst">Financial &amp; GST</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="discount_calculator">Discount Calculator</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="gst_calculator">GST Calculator</string>
    <string name="date_difference_title">Date Difference</string>
    <string name="call_settings">Call settings</string>
    <string name="after_call_option">After call option</string>
    <string name="after_any_call_you_ll_see_options_to_call_back_message_or_save_the_contact">After any call, you’ll see options to call back, message, or save the contact.</string>
    <string name="no_history_found">No history found</string>
    <string name="end_date">End Date</string>
    <string name="price">Price</string>
    <string name="_discount">Discount %</string>
    <string name="percentage">Percentage</string>
    <string name="amount">Amount</string>
    <string name="date_difference">Date Difference</string>
    <string name="invalid_date_range">Invalid Date Range</string>
    <string name="unit">Unit</string>
    <string name="select_language">Select Language</string>
    <string name="invalid_input">Invalid input</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="invalid">Invalid</string>
    <string name="error_invalid_date">Error\nInvalid Date</string>
    <string name="month_day">%1$d Month\n%2$d Day</string>
    <string name="days_">Days\n%1$s</string>
    <string name="hours">Hours\n%1$s</string>
    <string name="minutes">Minutes\n%1$s</string>
    <string name="start_date">Start Date</string>
    <string name="difference">Difference</string>
    <string name="weeks_">Weeks\n%s</string>
    <string name="days">Days</string>
</resources>