<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/clActionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="10dp"
            android:padding="6dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvHistoryTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHistoryTitle"
            android:layout_weight="1"
            style="@style/ScreenTitle"
            android:text="@string/history"
            android:gravity="start|center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cbSelectAll"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/cbSelectAll"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_unchecked"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvHistoryTitle"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_history_found"
        android:fontFamily="@font/inter_regular"
        android:textSize="18sp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/bottomActionContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clActionBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/bottomActionContainer"
        app:layout_constraintTop_toBottomOf="@id/clActionBar"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/item_history" />

    <FrameLayout
        android:id="@+id/bottomActionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnClearHistory"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:text="@string/clear_history"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:paddingHorizontal="10dp"
            android:fontFamily="@font/inter_semibold"
            android:textSize="18sp"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/selectionActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/bg_color"
            android:visibility="gone"
            android:paddingVertical="12dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/actionRecalculate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_recalculate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recalculate"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="15sp"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/actionCopy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_copy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copy"
                    android:textSize="15sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/actionDelete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_delete" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textSize="15sp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="@color/text_color"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
